@@ -13,7 +13,6 @@ import com.github.scribejava.core.model.OAuthConfig;
 import com.github.scribejava.core.model.OAuthConstants;
 import com.github.scribejava.core.model.OAuthRequest;
 import com.github.scribejava.core.model.OAuthRequestAsync;
-import com.github.scribejava.core.model.Response;
 import java.util.Map;
 
 public class OAuth20Service extends OAuthService {
@@ -33,19 +32,19 @@ public class OAuth20Service extends OAuthService {
     }
 
     //sync version, protected to facilitate mocking
-    protected OAuth2AccessToken sendTokenSync(OAuthRequest request) {
+    protected OAuth2AccessToken sendAccessTokenRequestSync(OAuthRequest request) {
         return api.getAccessTokenExtractor().extract(request.send().getBody());
     }
 
     //async version, protected to facilitate mocking
-    protected Future<OAuth2AccessToken> sendTokenAsync(OAuthRequestAsync request,
+    protected Future<OAuth2AccessToken> sendAccessTokenRequestAsync(OAuthRequestAsync request,
             OAuthAsyncRequestCallback<OAuth2AccessToken> callback, ProxyServer proxyServer) {
 
         return request.sendAsync(callback, new OAuthRequestAsync.ResponseConverter<OAuth2AccessToken>() {
             @Override
             public OAuth2AccessToken convert(com.ning.http.client.Response response) throws IOException {
                 return getApi().getAccessTokenExtractor()
-                  .extract(OAuthRequestAsync.RESPONSE_CONVERTER.convert(response).getBody());
+                        .extract(OAuthRequestAsync.RESPONSE_CONVERTER.convert(response).getBody());
             }
         }, proxyServer);
     }
@@ -54,7 +53,7 @@ public class OAuth20Service extends OAuthService {
         final OAuthRequest request = createAccessTokenRequest(code,
                 new OAuthRequest(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
 
-        return sendTokenSync(request);
+        return sendAccessTokenRequestSync(request);
     }
 
     /**
@@ -75,7 +74,7 @@ public class OAuth20Service extends OAuthService {
         final OAuthRequestAsync request = createAccessTokenRequest(code,
                 new OAuthRequestAsync(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
 
-        return sendTokenAsync(request, callback, proxyServer);
+        return sendAccessTokenRequestAsync(request, callback, proxyServer);
     }
 
     protected <T extends AbstractRequest> T createAccessTokenRequest(String code, T request) {
@@ -95,9 +94,9 @@ public class OAuth20Service extends OAuthService {
 
     public final OAuth2AccessToken refreshAccessToken(String refreshToken) {
         final OAuthRequest request = createRefreshTokenRequest(refreshToken,
-          new OAuthRequest(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
+                new OAuthRequest(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
 
-        return sendTokenSync(request);
+        return sendAccessTokenRequestSync(request);
     }
 
     public final Future<OAuth2AccessToken> refreshAccessTokenAsync(String refreshToken,
@@ -110,7 +109,7 @@ public class OAuth20Service extends OAuthService {
         final OAuthRequestAsync request = createRefreshTokenRequest(refreshToken,
                 new OAuthRequestAsync(api.getAccessTokenVerb(), api.getRefreshTokenEndpoint(), this));
 
-        return sendTokenAsync(request, callback, proxyServer);
+        return sendAccessTokenRequestAsync(request, callback, proxyServer);
     }
 
     protected <T extends AbstractRequest> T createRefreshTokenRequest(String refreshToken, T request) {
@@ -132,39 +131,36 @@ public class OAuth20Service extends OAuthService {
      * @param password User password
      * @return OAuth2AccessToken
      */
-
     public final OAuth2AccessToken getAccessTokenPasswordGrant(String uname, String password) {
         final OAuthRequest request = createAccessTokenPasswordGrantRequest(uname, password,
-          new OAuthRequest(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
+                new OAuthRequest(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
 
-        return sendTokenSync(request);
+        return sendAccessTokenRequestSync(request);
     }
 
     /**
-   * Request Access Token Password Grant async version
-   *
-   * @param uname User name
-   * @param password User password
-   * @param callback Optional callback
-   * @return Future
-   */
+     * Request Access Token Password Grant async version
+     *
+     * @param uname User name
+     * @param password User password
+     * @param callback Optional callback
+     * @return Future
+     */
     public final Future<OAuth2AccessToken> getAccessTokenPasswordGrantAsync(String uname, String password,
             OAuthAsyncRequestCallback<OAuth2AccessToken> callback) {
-        final OAuthRequestAsync request = createAccessTokenPasswordGrantRequest(uname, password,
-          new OAuthRequestAsync(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
-
         return getAccessTokenPasswordGrantAsync(uname, password, callback, null);
     }
 
     public final Future<OAuth2AccessToken> getAccessTokenPasswordGrantAsync(String uname, String password,
             OAuthAsyncRequestCallback<OAuth2AccessToken> callback, ProxyServer proxyServer) {
         final OAuthRequestAsync request = createAccessTokenPasswordGrantRequest(uname, password,
-          new OAuthRequestAsync(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
+                new OAuthRequestAsync(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
 
-        return sendTokenAsync(request, callback, proxyServer);
+        return sendAccessTokenRequestAsync(request, callback, proxyServer);
     }
 
-    protected <T extends AbstractRequest> T createAccessTokenPasswordGrantRequest(String username, String password, T request) {
+    protected <T extends AbstractRequest> T createAccessTokenPasswordGrantRequest(String username, String password,
+            T request) {
         final OAuthConfig config = getConfig();
         request.addParameter(OAuthConstants.USERNAME, username);
         request.addParameter(OAuthConstants.PASSWORD, password);
@@ -175,12 +171,12 @@ public class OAuth20Service extends OAuthService {
 
         request.addParameter(OAuthConstants.GRANT_TYPE, OAuthConstants.PASSWORD);
 
-        request.addHeader(OAuthConstants.HEADER, OAuthConstants.BASIC + " " +
-          Base64Encoder.getInstance().encode(
-            String.format("%s:%s", config.getApiKey(), config.getApiSecret()).getBytes(
-              Charset.forName("UTF-8")
-            )
-          )
+        request.addHeader(OAuthConstants.HEADER, OAuthConstants.BASIC + " "
+                + Base64Encoder.getInstance().encode(
+                        String.format("%s:%s", config.getApiKey(), config.getApiSecret()).getBytes(
+                        Charset.forName("UTF-8")
+                )
+                )
         );
 
         return request;
