@@ -1,16 +1,12 @@
 package com.github.scribejava.core.oauth;
 
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 
-/**
- */
 class CompletedFuture<V> implements Future<V> {
     private final V result;
 
-    public CompletedFuture( V result ) {
+    CompletedFuture(V result) {
         this.result = result;
     }
 
@@ -30,14 +26,12 @@ class CompletedFuture<V> implements Future<V> {
     }
 
     @Override
-    public V get() throws InterruptedException, ExecutionException {
+    public V get() {
         return result;
     }
 
     @Override
-    public V get(long timeout, TimeUnit unit) throws InterruptedException, ExecutionException,
-        TimeoutException {
-
+    public V get(long timeout, TimeUnit unit) {
         return result;
     }
 }
