@@ -13,34 +13,29 @@ import java.nio.charset.Charset;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
 
-/**
- */
 public class OAuth20ServiceTest {
 
     @Test
     public void shouldProduceCorrectRequestSync() {
         final OAuth20Service service = new ServiceBuilder()
-            .apiKey("your_api_key")
-            .apiSecret("your_api_secret")
-            .build( new OAuth20ApiUnit() );
+                .apiKey("your_api_key")
+                .apiSecret("your_api_secret")
+                .build(new OAuth20ApiUnit());
 
         final OAuth2AccessToken token = service.getAccessTokenPasswordGrant("user1", "password1");
         final Gson json = new Gson();
 
         Assert.assertNotNull(token);
 
-        Map<String, String> map = json.fromJson(token.getRawResponse(),
-            new TypeToken<Map<String, String>>(){}.getType());
+        final Map<String, String> map = json.fromJson(token.getRawResponse(), new TypeTokenImpl().getType());
 
-        Assert.assertEquals(OAuth20ServiceUnit.token, map.get(OAuthConstants.ACCESS_TOKEN));
-        Assert.assertEquals(OAuth20ServiceUnit.state, map.get(OAuthConstants.STATE));
-        Assert.assertEquals(OAuth20ServiceUnit.expires, map.get("expires_in"));
+        Assert.assertEquals(OAuth20ServiceUnit.TOKEN, map.get(OAuthConstants.ACCESS_TOKEN));
+        Assert.assertEquals(OAuth20ServiceUnit.STATE, map.get(OAuthConstants.STATE));
+        Assert.assertEquals(OAuth20ServiceUnit.EXPIRES, map.get("expires_in"));
 
-        final String authorize = Base64Encoder.getInstance().encode(
-            String.format("%s:%s", service.getConfig().getApiKey(), service.getConfig().getApiSecret()).getBytes(
-                Charset.forName("UTF-8")
-            )
-        );
+        final String authorize = Base64Encoder.getInstance()
+                .encode(String.format("%s:%s", service.getConfig().getApiKey(), service.getConfig().getApiSecret())
+                        .getBytes(Charset.forName("UTF-8")));
 
         Assert.assertEquals(OAuthConstants.BASIC + " " + authorize, map.get(OAuthConstants.HEADER));
 
@@ -52,33 +47,36 @@ public class OAuth20ServiceTest {
     @Test
     public void shouldProduceCorrectRequestAsync() throws ExecutionException, InterruptedException {
         final OAuth20Service service = new ServiceBuilder()
-          .apiKey("your_api_key")
-          .apiSecret("your_api_secret")
-          .build( new OAuth20ApiUnit() );
+                .apiKey("your_api_key")
+                .apiSecret("your_api_secret")
+                .build(new OAuth20ApiUnit());
 
         final OAuth2AccessToken token = service.getAccessTokenPasswordGrantAsync("user1", "password1", null).get();
         final Gson json = new Gson();
 
         Assert.assertNotNull(token);
 
-        Map<String, String> map = json.fromJson(token.getRawResponse(),
-          new TypeToken<Map<String, String>>(){}.getType());
+        final Map<String, String> map = json.fromJson(token.getRawResponse(), new TypeTokenImpl().getType());
 
-        Assert.assertEquals(OAuth20ServiceUnit.token, map.get(OAuthConstants.ACCESS_TOKEN));
-        Assert.assertEquals(OAuth20ServiceUnit.state, map.get(OAuthConstants.STATE));
-        Assert.assertEquals(OAuth20ServiceUnit.expires, map.get("expires_in"));
+        Assert.assertEquals(OAuth20ServiceUnit.TOKEN, map.get(OAuthConstants.ACCESS_TOKEN));
+        Assert.assertEquals(OAuth20ServiceUnit.STATE, map.get(OAuthConstants.STATE));
+        Assert.assertEquals(OAuth20ServiceUnit.EXPIRES, map.get("expires_in"));
 
-        final String authorize = Base64Encoder.getInstance().encode(
-          String.format("%s:%s", service.getConfig().getApiKey(), service.getConfig().getApiSecret()).getBytes(
-            Charset.forName("UTF-8")
-          )
-        );
+        final String authorize = Base64Encoder.getInstance()
+                .encode(String.format("%s:%s", service.getConfig().getApiKey(), service.getConfig().getApiSecret())
+                        .getBytes(Charset.forName("UTF-8")));
 
         Assert.assertEquals(OAuthConstants.BASIC + " " + authorize, map.get(OAuthConstants.HEADER));
 
         Assert.assertEquals("user1", map.get("query-username"));
         Assert.assertEquals("password1", map.get("query-password"));
         Assert.assertEquals("password", map.get("query-grant_type"));
+    }
+
+    private static class TypeTokenImpl extends TypeToken<Map<String, String>> {
+
+        private TypeTokenImpl() {
+        }
     }
 
 }
