@@ -1,6 +1,7 @@
 package com.github.scribejava.core.oauth;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.model.AbstractRequest;
 import com.github.scribejava.core.model.OAuth2AccessToken;
 import com.github.scribejava.core.model.OAuthAsyncRequestCallback;
 import com.github.scribejava.core.model.OAuthConfig;
@@ -15,65 +16,50 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.Future;
 
-/**
- */
 class OAuth20ServiceUnit extends OAuth20Service {
 
-  final static String token = "ae82980abab675c646a070686d5558ad";
-  final static String state = "123";
-  final static String expires = "3600";
+    static final String TOKEN = "ae82980abab675c646a070686d5558ad";
+    static final String STATE = "123";
+    static final String EXPIRES = "3600";
 
-  public OAuth20ServiceUnit(DefaultApi20 api, OAuthConfig config) {
-    super(api, config);
-  }
-
-  @Override
-  protected OAuth2AccessToken sendTokenSync(OAuthRequest request) {
-
-    final Gson json = new Gson();
-    final Map<String, String> response = new HashMap<>();
-
-    response.put(OAuthConstants.ACCESS_TOKEN, token);
-    response.put(OAuthConstants.STATE, state);
-    response.put("expires_in", expires);
-
-    response.putAll( request.getHeaders() );
-    response.putAll( request.getOauthParameters() );
-
-    for(Parameter p : request.getBodyParams().getParams()) {
-      response.put( "query-" + p.getKey(), p.getValue() );
+    OAuth20ServiceUnit(DefaultApi20 api, OAuthConfig config) {
+        super(api, config);
     }
 
-    return new OAuth2AccessToken(token, json.toJson( response ));
-  }
+    @Override
+    protected OAuth2AccessToken sendAccessTokenRequestSync(OAuthRequest request) {
+        return new OAuth2AccessToken(TOKEN, prepareRawResponse(request));
+    }
 
-  @Override
-  protected Future<OAuth2AccessToken> sendTokenAsync(OAuthRequestAsync request,
-      OAuthAsyncRequestCallback<OAuth2AccessToken> callback, ProxyServer proxyServer) {
+    private <T extends AbstractRequest> String prepareRawResponse(T request) {
+        final Gson json = new Gson();
+        final Map<String, String> response = new HashMap<>();
+        response.put(OAuthConstants.ACCESS_TOKEN, TOKEN);
+        response.put(OAuthConstants.STATE, STATE);
+        response.put("expires_in", EXPIRES);
 
-      final Gson json = new Gson();
-      final Map<String, String> response = new HashMap<>();
+        response.putAll(request.getHeaders());
+        response.putAll(request.getOauthParameters());
 
-      response.put(OAuthConstants.ACCESS_TOKEN, token);
-      response.put(OAuthConstants.STATE, state);
-      response.put("expires_in", expires);
+        for (Parameter p : request.getBodyParams().getParams()) {
+            response.put("query-" + p.getKey(), p.getValue());
+        }
 
-      response.putAll( request.getHeaders() );
-      response.putAll( request.getOauthParameters() );
+        return json.toJson(response);
+    }
 
-      for(Parameter p : request.getBodyParams().getParams()) {
-        response.put( "query-" + p.getKey(), p.getValue() );
-      }
+    @Override
+    protected Future<OAuth2AccessToken> sendAccessTokenRequestAsync(OAuthRequestAsync request,
+            OAuthAsyncRequestCallback<OAuth2AccessToken> callback, ProxyServer proxyServer) {
 
-      final OAuth2AccessToken accessToken = new OAuth2AccessToken(token, json.toJson( response ));
+        final OAuth2AccessToken accessToken = new OAuth2AccessToken(TOKEN, prepareRawResponse(request));
 
-      try {
-          return new CompletedFuture(accessToken);
-      }
-      finally {
-          if( callback != null ) {
-              callback.onCompleted(accessToken);
-          }
-      }
-  }
+        try {
+            return new CompletedFuture<>(accessToken);
+        } finally {
+            if (callback != null) {
+                callback.onCompleted(accessToken);
+            }
+        }
+    }
 }
